--- a/project.Rmd
+++ b/project.Rmd
@@ -8,18 +8,15 @@ output:
       theme: journal
       toc: true
       toc_float: true
-        # base_format: rmdformats::html_clean
-        # keep_md: no
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE, out.width = "80%")
+knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE, 
+                      out.width = "80%")
 
-# library(rmdformats)
 library(fpp3)
 library(tidyverse)
 library(kableExtra)
-#library(DataExplorer) 
 library(viridis)
 ```
 
@@ -29,65 +26,98 @@ knitr::include_graphics("Sales-Forecasting.jpg")
 
 Objective: To forecast a real time series using ETS and ARIMA models.
 
-```{r}
+```{r dataset}
 set.seed(32296622)
 myseries <- aus_retail |>
-  #sampling
   
   filter(!(`Series ID` %in% c("A3349561R","A3349883F","A3349499L","A3349902A",
                         "A3349588R","A3349763L","A3349372C","A3349450X",
                         "A3349679W","A3349378T","A3349767W","A3349451A"))) |>
-  filter(`Series ID` == sample(`Series ID`,1)) #random series selected
-
-#write.csv(myseries, "datamyseries.csv")
+  filter(`Series ID` == sample(`Series ID`,1))
 ```
 
 # Statistical features of the original data.
 
-The data set used is a subset of the *aus_retail* data which contain one numeric values, i.e. Turnover in $Million AUD. *aus_retail* is a part of *tsibbledata* package and can also be loaded with the package *fpp3* which contains total 9 packages including tsibbledata.
+## Data Description
+
+The data set used is a subset of the *aus_retail* data which contains one numeric variable, i.e. Turnover in $Million AUD. *aus_retail* is a part of *tsibbledata* package and can also be loaded with the package *fpp3* which contains total 9 packages including tsibbledata.
+
 The data is a time series of class *tsibble* and the source for the same is [Australian Bureau of Statistics, catalogue number 8501.0, table 11.](https://www.abs.gov.au/ausstats/abs@.nsf/exnote/8501.0)(Robjhyndman, n.d.).
 
-The sample data set contains the Turnover data for the hardware, building and garden supplies retailing for the state of South Australia for the years 1982 to 2018 (calculated quarterly, i.e. over a period of 4 months) and contains `r nrow(myseries)` observations and `r ncol(myseries)` columns.
+The sample data set contains the Turnover data for the *'hardware, building and garden supplies retailing'* for the state of *'South Australia'* for the years *'1982 to 2018'* (calculated each month from April 1982 to December 2018) and contains `r nrow(myseries)` observations and `r ncol(myseries)` columns.
 
-```{r}
-myseries
-```
+The dataset contain the following variables and table \@ref(tab:tab1) displays the variable type as well.
 
-```{r}
-interval(myseries)
-```
-
-```{r}
-myseries |> 
-  # mutate(year=year(Month)) |>
-  index_by(Month) |> 
-  summarise(Total_turnover= mean(Turnover))
-```
-
-```{r, include=FALSE}
+```{r checking_variabletypes, include=FALSE}
 str(myseries)
 ```
 
-```{r}
+```{r tab1}
 data_dict <- data.frame(
   S.No. = c("1", "2", "3", "4", "5"),
   Variables = c ("State", "Industry", "Series ID", "Month", "Turnover" ),
   DataType = c("Character", "Character", "Character", "Month", "Numeric"))
 
 
-knitr::kable ( data_dict ,caption = "Data Dictonary") %>% 
-  kable_styling(latex_options = c("striped", "hold_position")) %>% 
-  kable_paper("hover", full_width = T) %>% 
+knitr::kable ( data_dict ,caption = "Data Dictonary") |> 
+  kable_styling(latex_options = c("striped", "hold_position")) |> 
+  kable_paper("hover", full_width = T) |> 
   scroll_box(width = "100%", height = "300px")
 ```
 
-```{r, include=FALSE}
-dup <- myseries %>% 
+## Data view
+
+```{r viewing_data}
+myseries
+```
+
+## Simple Statistic features
+
+### Yearly average of Turnover 
+
+Table \@ref(tab:tab2) displays an yearly average turnover in $Million AUD.
+
+```{r tab2}
+year_average <- myseries |> 
+  mutate(year=year(Month)) |>
+  index_by(year) |> 
+  summarise(Total_turnover= mean(Turnover))
+
+knitr::kable ( year_average ,caption = "Yearly Turnover Summary") |> 
+  kable_styling(latex_options = c("striped", "hold_position")) |> 
+  kable_paper("hover", full_width = T) |> 
+  scroll_box(width = "100%", height = "300px")
+```
+
+```{r checking_duplicates, include=FALSE}
+dup <- myseries |> 
   subset(duplicated (myseries))
 #no duplicates
 ```
 
-```{r, fig.cap="Quantile-Quantile Plot"}
+### Overall mean
+
+```{r mean}
+myseries |>
+  features(Turnover, list(mean = mean)) |>
+  arrange(mean)
+```
+
+### Quantile distribution
+
+Here the data has been divided into 4 equal section, each containing 25% of the data.
+
+```{r}
+myseries |> 
+  features(Turnover, quantile)
+```
+
+
+## Statistical plots for data 
+
+Figure \@ref(fig:fig1) shows that both the ends of this Q-Q plot deviates, and hence, has a fat tail but its center also does not follow a typically straight line. This means that the plot has many extreme values and the values vary throughout as well.
+
+```{r fig1, fig.cap="Quantile-Quantile Plot"}
 ggplot(myseries, aes(sample = Turnover)) +
   geom_qq() + 
   geom_qq_line(color = "#6C03A0")+
@@ -100,8 +130,9 @@ ggplot(myseries, aes(sample = Turnover)) +
     axis.text.y = element_text(colour= "#08007F", size=8))
 ```
 
+Figure \@ref(fig:fig2) is a histogram and is somewhat similar to Bi-modal data, i.e., it represents 2 peaks. Here, it seems that both peaks have similar densities and the curve is sinusoidal. 
 
-```{r, fig.cap="Distribution of Turnover"}
+```{r fig2, fig.cap="Distribution of Turnover"}
   ggplot(myseries, aes(x=Turnover)) +
   geom_histogram(aes(y=after_stat(density)), fill = "#6EBA6B")+
   geom_density(color = "#6C03A0") +
@@ -114,17 +145,16 @@ ggplot(myseries, aes(sample = Turnover)) +
     axis.text.y = element_text(colour= "#08007F", size=8))
 ```
 
-```{r dataquality, include=FALSE}
-#plot_missing(myseries)
-#skimr::skim(myseries)
-```
 
-```{r}
-# ggplot(myseries, aes(x=Month, y=Turnover))+
-#   geom_line()
-```
+### Exploring Time-Series Features
 
-```{r, fig.cap="Time Series"}
+Figure \@ref(fig:fig3) shows that:
+
+- Trend: There is somewhat an increasing trend visible in the data set.
+
+- Seasonality: There is a multiplicative seasonality as there is a change in height of the values with time. There are strong peaks observed at the end of each year.
+
+```{r fig3, fig.cap="Time Series"}
 myseries |> 
   autoplot(Turnover, color= "#C63F2C")+
   xlab("Year/Month")+
@@ -136,7 +166,9 @@ myseries |>
     axis.text.y = element_text(colour= "#08007F", size=8))
 ```
 
-```{r, fig.cap="Seasonal Plot"}
+According to figure \@ref(fig:fig4),the highest turnovers are observed in December in each year and February has vales towards the lower end. This is possible due to the fact that hardware, building and garden work are outdoor tasks and is preferred to be done during summers and summer rises in December in Australia and starts to end by February.
+
+```{r fig4, fig.cap="Seasonal Plot"}
 myseries |> 
   gg_season(Turnover, 
             labels = "both")+
@@ -147,10 +179,11 @@ myseries |>
     panel.grid.major.y = element_blank(),
     axis.text.x = element_text(color="#993333", angle=45, size=8),
     axis.text.y = element_text(colour= "#08007F", size=8))
-  
 ```
 
-```{r}
+In figure \@ref(fig:fig5) the blue line shows the mean value for each month for all years. This plot confirms our observation from figure \@ref(fig:fig4) that the highest turnover was observed in December and lowest in February.
+
+```{r fig5, fig.cap="Subseries Plot"}
 myseries |> 
   gg_subseries(Turnover, color= "#156A06")+
   ylab("Turnover ($Million AUD)")+
@@ -162,7 +195,16 @@ myseries |>
   
 ```
 
-```{r, fig.cap="Lag plot"}
+Below it is seen that a high value is present for the seasonal features.
+
+```{r stl}
+myseries |>
+  features(Turnover, feat_stl)
+```
+
+Here in figure \@ref(fig:fig6), the colours indicate different months on the vertical axis. Most of the lag plots have shown positive correlation and hence, confirming strong seasonality in the data.
+
+```{r fig6, fig.cap="Lag plot"}
 myseries |> 
   gg_lag(Turnover, lags=1:24, geom='point', size=0.5)+
   facet_wrap(~ .lag, ncol=6)+
@@ -175,9 +217,17 @@ myseries |>
     axis.text.y = element_text(colour= "#08007F", size=8))
 ```
 
-```{r, fig.cap="ACF"}
+Autocorrelation is shown in figure \@ref(fig:fig7), i.e. a linear relationship between lagged values of time series. It shows that:
+
+- There are peaks observed at every 12th lag, i.e. at the end of each month and hence, there is seasonality.This is also suggested by the fact that an equivalent amount of dip is observed (from the previous lag) at equal intervals.
+
+- The *Scalloped" shape observed is also due to seasonality.
+
+- This data has a trend as autocorrelations for the small lags are large and positive (as observations close in time are also close in value) and these positive values slowing decreases as lags increase.
+
+```{r fig7, fig.cap="ACF"}
 myseries |> 
-ACF(Turnover, lag_max = 46) |> 
+ACF(Turnover, lag_max = 48) |> 
   autoplot()+
   ylab("ACF")+
   xlab("Lag [1 Month]")+
@@ -188,17 +238,281 @@ ACF(Turnover, lag_max = 46) |>
     axis.text.y = element_text(colour= "#08007F", size=8))
 ```
 
+Below is a summary of seven autocorrelation features (in this order):
+first autocorrelation feature of the original data, sum of squares of first 10 coefficients from original data, first autocorrelation feature from differenced data, sum of squares of first 10 coefficients from differenced data, first autocorrelation feature from twice differenced data, sum of squares of first 10 coefficients from twice differenced data and autocorrelation coefficient at first seasonal lag.
+
+```{r acf}
+myseries |> 
+  features(Turnover, feat_acf)
+```
+
+
 # Transformations and differencing used (including unit-root test).
+
+Transformations and difference is done to make the data stationary. There are 3 steps for this process:
+
+- Check the changing variance in the data, if visible, **transform** the data with an appropriate lambda value. *Evaluate if the data is stationary and if no, move to the next step.*
+
+- **Seasonal difference** to be carried out to remove seasonality, if the data is seasonal. This step also removes trend sometimes. *Evaluate if the data is stationary and if no, move to the next step.*
+
+- Perform **regular difference** to remove any trend and anything else leftover.
+
+## Step 1: Transformation
+
+Figure \@ref(fig:fig8) shows a time series by transforming turnover to log(turnover) and it seems that 
+there is still some trend and seasonality in the data, so this is not an appropriate transformation.
+
+```{r fig8, fig.cap="Log Transformation"}
+myseries |> 
+  autoplot(log(Turnover))+
+  ylab("Log Turnover")+
+  xlab("Year Month")+
+  theme_minimal()+
+   theme( plot.background = element_rect(fill = "#FFF8F7"),
+    panel.grid.major.y = element_blank(),
+        axis.text.x = element_text(color="#993333", angle=45, size=8),
+    axis.text.y = element_text(colour= "#08007F", size=8))
+```
+
+Therefore, performing the Guerrero test ahead to find out lambda value for box-cox transformation.
+
+```{r lambda}
+lambda<- myseries |> 
+  features(Turnover, features = guerrero)
+lambda <- pull(lambda)
+
+lambda
+```
+
+In figure \@ref(fig:fig9) box-cox transformation is performed on turnover with lambda= 0.4662629 and it still seems to have trend and seasonal pattern. The data is not stationary.
+
+```{r fig9, fig.cap="Box-Cox Transformation"}
+myseries |> 
+  autoplot(box_cox(Turnover, lambda))+
+  ylab("Transformed Turnover (lambda=0.467)")+
+  xlab("Year Month")+
+  theme_minimal()+
+   theme( plot.background = element_rect(fill = "#FFF8F7"),
+    panel.grid.major.y = element_blank(),
+        axis.text.x = element_text(color="#993333", angle=45, size=8),
+    axis.text.y = element_text(colour= "#08007F", size=8))
+```
+
+Figure \@ref(fig:fig10) shows the time plot and ACF together and adds a new plot to the report, i.e. PACF (will be used in section 3). 
+
+```{r fig10, fig.cap="Timeplot, ACF, PACF with Transform"}
+myseries |> 
+  gg_tsdisplay(box_cox(Turnover, lambda), plot_type = "partial")
+```
+
+There are still features of some trend and seasonality visible in the ACF, i.e. data is not stationary and therefore, requires seasonal difference.
+
+### Step 2:  Seasonal Difference
+
+Confirming conclusion from figure \@ref(fig:fig10) using unit root KPSS test which defines Null Hypothesis Ho= Data is Stationary.
+
+```{r kpss}
+myseries |> 
+  features(box_cox(Turnover, lambda), unitroot_kpss)
+```
+
+Here the p value is 0.01, which actually means that the value is < 0.01 (due to a limit applied)
+If p < 0.05, we need to difference the data. Hence, Ho is rejected.
+
+Confirming if a seasonal difference is needed.
+
+```{r nsdiff}
+myseries |> 
+  features(box_cox(Turnover, lambda), unitroot_nsdiffs)
+```
+
+It is shown that 1 seasonal difference is needed.
+
+In figure \@ref(fig:fig10), ACF shows that, the there is seasonality and is a monthly lag data, and hence, the lag is used as 12 for the first seasonal difference.
+
+```{r fig11, fig.cap("After Transforming and Seasonal Differencing")}
+myseries |> 
+  gg_tsdisplay(difference(box_cox(Turnover, lambda), lag=12), plot_type = "partial")
+```
+
+From \@ref(fig:fig11) can be said stationary as it is observed that:
+
+- In the ACF, the data falls to 0 quickly after the 11th lag.
+
+- The time plot shows unrelated values, i.e. not varying with time.
+
+- There seems to be no seasonality or trend left in the data.
+
+This is confirmed by unit root KPSS tests below:
+
+```{r kpss_diff}
+myseries |> 
+  features(difference(box_cox(Turnover, lambda), lag=12), unitroot_kpss)
+```
+
+Here the p value is 0.1 (or > 0.1) and can be said stationary.
+
+Further checking if more differencing is required:
+
+```{r ndiff}
+myseries |> 
+  features(difference(box_cox(Turnover, lambda), lag=12), unitroot_ndiffs)
+```
+
+This shows that no more difference is needed, i.e. no need to perform step 3 of evaluating a regular difference. Hence, the data is now stationary.
 
 # Methodology used to create a short-list of appropriate ARIMA models and ETS models. (Includes AIC values as well as results from applying the models to a test-set consisting of the last 24 months of the data provided).
 
+ETS
+
+```{r}
+myseries |> 
+autoplot(box_cox(Turnover, lambda))
+
+view <- myseries
+```
+
+This has trend and seasonality
+
+```{r}
+test <- myseries |> 
+  filter(Month > yearmonth("2009 Dec"))
+
+train <- myseries |> 
+  filter(Month <= yearmonth("2009 Dec"))
+```
+
+Selecting ETS
+
+This is a multiplicative seasonal series. This is also the case for error and it follows a general additive trend. The appropriate models could be (MAM), (MNM) or (MAdM)
+
+```{r}
+fit2 <- train |> 
+  model(MAM= ETS(box_cox(Turnover, lambda)~ error("M")+ trend("A")+ season("M")),
+        MNM= ETS(box_cox(Turnover, lambda)~ error("M")+ trend("N")+ season("M")),
+        MAdM= ETS(box_cox(Turnover, lambda)~ error("M")+ trend("Ad")+ season("M")),
+        ets_auto= ETS(box_cox(Turnover, lambda))
+        )
+
+report(fit2)
+glance(fit2)
+tidy(fit2)
+accuracy(fit2)
+```
+
+```{r}
+fit2 |> 
+  forecast(h=24) |> 
+  autoplot(train, level = NULL)
+```
+
+```{r}
+fit2 |> 
+  forecast(h=24) |> 
+  accuracy(myseries)
+```
+
+
+ARIMA
+
+```{r}
+train |> 
+  gg_tsdisplay(difference(box_cox(Turnover, lambda), lag=12), plot_type = "partial")
+```
+
+
+Finding (p,d,q) and (P,D,Q)
+d=0, D=1
+For q we look at ACF plot and significant lags before 12 is only 1st, can be 2nd too. So q=1 or can be q=2.
+In PACF, sig lag is on 13th , so p=1 .
+
+Hence (p,d,q)= (1,0,1) (2,0,1) (0,0,1) (2,0,0) (1,0,2) (2,0,2) (0,0,2) (2,0,0)
+
+For seasonal values, we only look at seasonal lags, i.e. multiples of 12.
+Here we did 1 difference so D=1
+looking at ACF, Q=0 as ACF quickly decays to 0.
+from PACF, only lag at 12  and 24 seem significant so P=2
+Hence (P,D,Q)= (2,1,0)
+
+Looking at the time plot, the average is not the center so a constant can be present.
+
+Trying combinations
+
+```{r}
+fit <- train |> 
+  model(
+    arima101210= ARIMA(box_cox(Turnover, lambda) ~ pdq(1,0,1) +PDQ(2,1,0)),
+    arima201210= ARIMA(box_cox(Turnover, lambda) ~ pdq(2,0,1) +PDQ(2,1,0)),
+    arima_auto= ARIMA(box_cox(Turnover, lambda) , trace = TRUE, stepwise = FALSE)
+) 
+
+tidy(fit)
+glance(fit)
+```
+
+```{r}
+fit |> 
+  forecast(h=24) |> 
+  autoplot(train, level=NULL)
+```
+
+```{r}
+fit |> 
+  forecast(h=24) |> 
+  accuracy(myseries)
+```
+
 # Choosing one ARIMA model and one ETS model based on this analysis and showing parameter estimates, residual diagnostics, forecasts and prediction intervals for both models. Also diagnostic checking for both models including ACF graphs and the Ljung-Box test is shown. 
+
+ARIMA
+p,d,q- 
+
+```{r}
+myseries |> 
+  gg_tsdisplay(difference(box_cox(Turnover, lambda)), plot_type = "partial")
+```
+
+```{r}
+myseries |> 
+  model(ARIMA(box_cox(Turnover, lambda))) |> 
+  tidy()
+``` 
 
 
 # Comparison of the results from each of the preferred models and the best method for better forecasts (reference to the test-set).
 
+
+
+
 # Applying the two chosen models to the full data set, re-estimating the parameters but not changing the model structure. Producing out-of-sample point forecasts and 80% prediction intervals for each model for two years past the end of the data provided.
 
+```{r}
+myseries |> 
+  model(auto= ARIMA(box_cox(Turnover, lambda), trace=FALSE) ,
+        ets=ETS(box_cox(Turnover, lambda)~ trend("M"))
+        )|> 
+  forecast(h=10, time=100) |> 
+  autoplot(myseries)
+```
+
+When multiplicative trend in ETS, the plots are very similar.
+
+```{r}
+myseries |> 
+  model(auto= ARIMA(box_cox(Turnover, lambda), trace=FALSE) ,
+        ets=ETS(box_cox(Turnover, lambda)~ trend("M"))
+        )|> 
+  accuracy()
+```
+
+```{r}
+myseries |> 
+  model(auto= ARIMA(box_cox(Turnover, lambda), trace=FALSE) ,
+        ets=ETS(box_cox(Turnover, lambda)~ trend("M"))
+        )|> 
+  select(ets) |> 
+  gg_tsresiduals()
+```
 
 # Obtaining up-to-date data from the [ABS website](https://www.abs.gov.au/statistics/industry/retail-and-wholesale-trade/retail-trade-australia Table 11). - using the previous release of data, rather than the latest release and comparing above forecasts with the actual numbers.
 
